# kmeans_cpp

./: CMakeLists.txt  README.md  test.cpp
include/: kmeans.hpp  points.hpp
src/: kmeans.cpp  points.cpp
